--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400&display=swap');
 body{
-  background-color:#00B454;
+  background-color:darkgray;
   margin: 0;
 }
 
@@ -14,48 +14,43 @@ header{
   align-items: center;
 }
 
-.logo{
-
-}
-
 .logo a{
   color: white;
   text-decoration: none;
   font-size: 26px;
   font-family: Lato;
+  margin-right: 8px;
 }
 
+* {box-sizing: border-box;}
 .search form {
-  background: #F9F0DA;
-  border-bottom: 3px solid #BF5030;
-  margin-left: 20px;
-  border-radius: 25px;
+  position: relative;
+  width: 300px;
+  margin: auto;
 }
 
 .search input, .search button {
   border: none;
   outline: none;
-  background: transparent;
+  border-radius: 3px;
 }
 
 .search input {
+  position: inherit;
   width: 100%;
-  height: 22px;
+  height: 42px;
+  background: navajowhite;
   padding-left: 15px;
 }
 
 .search button {
-  height: 68px;
-  width: 666px;
+  height: 42px;
+  width: 42px;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 0px;
+  right: 0px;
+  background: darkorchid;
   cursor: pointer;
-}
-
-.search button:before {
-  font-size: 20px;
-  color: #BF5030;
 }
 
 .nav{
@@ -81,4 +76,65 @@ header{
 
 .nav ul:last-child{
 margin-right: 0;
+}
+
+.content{
+  display: flex;
+flex-wrap: wrap;
+justify-content: center;
+}
+
+.product-item {
+  flex: 0 1 calc(100%/3 - 20px*2);
+   width: 300px;
+   text-align: center;
+   margin: 4px;
+   border-bottom: 2px solid #F5F5F5;
+   background: white;
+   font-family: "Open Sans";
+   transition: .3s ease-in;
+}
+
+.product-item:hover {
+   border-bottom: 2px solid #fc5a5a;
+}
+
+.product-item img {
+   display: block;
+   width: 100%;
+}
+
+.product-list {
+   background: #fafafa;
+   padding: 15px 0;
+}
+
+.product-list h3 {
+   font-size: 18px;
+   font-weight: 400;
+   color: #444444;
+   margin: 0 0 10px 0;
+}
+
+.price {
+   font-size: 16px;
+   color: #fc5a5a;
+   display: block;
+   margin-bottom: 12px;
+}
+
+.button {
+   text-decoration: none;
+   display: inline-block;
+   padding: 0 12px;
+   background: #cccccc;
+   color: white;
+   text-transform: uppercase;
+   font-size: 12px;
+   line-height: 28px;
+   transition: .3s ease-in;
+}
+
+.product-item:hover .button {
+   background: #fc5a5a;
 }
